--- a/QG_NLP.ipynb
+++ b/QG_NLP.ipynb
@@ -1,13 +1,24 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "QG basic"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List of all discourse markers\n",
-    "discourse_markers = ['because', 'as a result', 'since', 'when', 'although', 'for example', 'for instance', 'meanwhile','thus']"
+    "class preprocessor():\n",
+    "    def __init__(self):\n",
+    "        self.sentence= \"I like books because I like reading.\"\n",
+    "    def undercase(self):\n",
+    "        self.text= self.text.lower()"
    ]
   },
   {
@@ -15,9 +26,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Paragraph = \"Hi, my name is ram. Nice to meet you\""
-   ]
+   "source": []
   }
  ],
  "metadata": {
