--- a/QG_NLP.ipynb
+++ b/QG_NLP.ipynb
@@ -26,7 +26,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Different question types possible for each discourse marker\n",
+    "qtype = {'because': ['Why'], 'since': ['When', 'Why'], 'when': ['When'], 'although': ['Yes/No'], 'as a result': ['Why'], \n",
+    "        'for example': ['Give an example where'], 'for instance': ['Give an instance where'], 'to': ['Why'] , \n",
+    "         'meanwhile': ['What was happening simultaneously when'],'thus':['How can','Why did']}\n"
+   ]
   }
  ],
  "metadata": {
