--- a/QG_NLP.ipynb
+++ b/QG_NLP.ipynb
@@ -10,15 +10,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Error loading all: <urlopen error [WinError 10065] A\n",
+      "[nltk_data]     socket operation was attempted to an unreachable host>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "import nltk.corpus# sample text for performing tokenization\n",
+    "nltk.download('all')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class preprocessor():\n",
     "    def __init__(self):\n",
-    "        self.sentence= \"I like books because I like reading.\"\n",
+    "        self.sentence= \"I like books very much because I like reading.\"\n",
     "    def undercase(self):\n",
-    "        self.text= self.text.lower()"
+    "        self.text= self.text.lower()\n",
+    "        return self.text"
    ]
   },
   {
@@ -30,7 +61,85 @@
     "# Different question types possible for each discourse marker\n",
     "qtype = {'because': ['Why'], 'since': ['When', 'Why'], 'when': ['When'], 'although': ['Yes/No'], 'as a result': ['Why'], \n",
     "        'for example': ['Give an example where'], 'for instance': ['Give an instance where'], 'to': ['Why'] , \n",
-    "         'meanwhile': ['What was happening simultaneously when'],'thus':['How can','Why did']}\n"
+    "         'meanwhile': ['What was happening simultaneously when'],'thus':['How can','Why did']}\n",
+    "aux_dict= {'i':['do'],'we':['do'],'you':['do'],'they':['do'],'he':['does'],'she':['does'],'it':['does']}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wh_part                    aux_part           sub_part   verb_part          rest_of_it\n",
+    "# Wh Question Word/Phrase + Auxiliary Verb   +   Subject + Main Verb +   Object or Other Information?\n",
+    "# why                         do                  you        like            books very much?\n",
+    "# because:{'why'}            I:{do}              'subj'     'verb'        from 'obj' upto 'because'\n",
+    "# keyword                    keyword            variable    variable      formatted string\n",
+    "# predefined dict          predefined dict      spacy       spacy       string formatting/function with regex\n",
+    "# program to check     dict choose&1ST aux     1st subj     1st vrb      from vrb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class wh_part:\n",
+    " def __init__(self):\n",
+    "    self.text= preprocessor.undercase()\n",
+    " x.intersection(y)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Error loading all: <urlopen error [WinError 10051] A\n",
+      "[nltk_data]     socket operation was attempted to an unreachable\n",
+      "[nltk_data]     network>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
