--- a/QG_NLP.ipynb
+++ b/QG_NLP.ipynb
@@ -487,7 +487,7 @@
     "#  def aux_part(self):\n",
     "#    self.pos_tags= [nltk.pos_tag([token]) for token in word_tokenize(\"I like books very much because I like reading.\")]\n",
     "#    print(\"post tags= \", self.pos_tags)\n",
-    "   \n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -531,25 +531,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[('I', 'PRP')],\n",
-       " [('like', 'IN')],\n",
-       " [('books', 'NNS')],\n",
-       " [('very', 'RB')],\n",
-       " [('much', 'JJ')],\n",
-       " [('because', 'IN')],\n",
-       " [('I', 'PRP')],\n",
-       " [('like', 'IN')],\n",
-       " [('reading', 'NN')],\n",
-       " [('.', '.')]]"
+       "['i', 'we', 'you', 'they', 'he', 'she', 'it']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
