--- a/QG_NLP.ipynb
+++ b/QG_NLP.ipynb
@@ -496,7 +496,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -531,21 +530,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['i', 'we', 'you', 'they', 'he', 'she', 'it']"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'dict_keys' object has no attribute 'lower'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[71], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mlist\u001b[39m(aux_dict\u001b[39m.\u001b[39;49mkeys()\u001b[39m.\u001b[39;49mlower())\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'dict_keys' object has no attribute 'lower'"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "\n",
+    "list(aux_dict.keys())"
+   ]
   }
  ],
  "metadata": {
